--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     Miru couldn't find a index.html lookalike inside the current process to serve.
     <br>
 
-    Miru also created a <code>miru.js</code> inside that directory to initialize the live events to the browser.
+    Miru also creates a <code>miru.js</code> file inside that directory to initialize the live events to the browser.
     <br>
 
     Add it as a script tag to your index.html page.
