--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Miru Demo</h1>
   Tiny giraffes dancing ballet.
-  <script src="miru.js" type="text/javascript"></script>
+  <script src="miru.init.js" type="text/javascript"></script>
 </body>
 </html>
