added link to bundle.css in demo index.html, fixed recovery watcher to look for cahnges recursively

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Miru Demo</title>
+  <link href="/bundle.css" rel="stylesheet">
 </head>
 <body>
   <h1>Miru Demo</h1>
